# python-vicalerts

./: .gitignore  README.md  pyproject.toml  vicemergency.sqlite
.devcontainer/: devcontainer.json
docker/: docker-compose.yml
src/vicalerts/: cli.py  client.py  database.py  parser.py  poller.py
src/vicemergency/: __init__.py  cli.py  client.py  database.py  models.py  parser.py  poller.py  probe_feed.py
tests/: __init__.py  conftest.py
tests/src/: __init__.py
tests/src/vicalerts/: test_cli.py  test_client.py  test_database.py  test_models.py  test_parser.py  test_poller.py
tests/src/vicemergency/: __init__.py  test_cli.py  test_client.py  test_database.py  test_models.py  test_parser.py  test_poller.py
